# pil-power-rankings

./: .gitignore  README.md  alembic.ini  db.py  env.py  nadeo.py  pil.ipynb  pyproject.toml
alembic/versions/: deb5a4749ff5_initial_revision_v4.py
dat/: ice_totds.csv  pil_maps.csv  players.csv  players_cleaned.csv  players_curated.csv
