[tool.poetry]
name = "pil-power-rankings"
version = "0.1.0"
description = ""
authors = ["Casey Johnson <caseyjohnsonwv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
